--- a/css/ClubAuto.css
+++ b/css/ClubAuto.css
@@ -1,11 +1,11 @@
 #Pub {
-    background-image: url("imgGlobal/vente-location.jpg");
+    background-image: url("/imgGlobal/vente-location.jpg");
     background-size: cover;
     background-position: center;
 }
 
 #vehicule3 {
-    background-image: url("imgGlobal/vehicule3.jpg");
+    background-image: url("/imgGlobal/vehicule3.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -28,21 +28,21 @@ body {
 }
 
 #bg-contact {
-    background-image: url("imgGlobal/vehicule3.jpg");
+    background-image: url("/imgGlobal/vehicule3.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: top;
 }
 
 #bg-location {
-    background-image: url("imgGlobal/vente-location.jpg");
+    background-image: url("/imgGlobal/vente-location.jpg");
     background-size: cover;
     background-position: center;
 
 }
 
 #vehicule2 {
-    background-image: url("imgGlobal/vehicule2.jpg");
+    background-image: url("/imgGlobal/vehicule2.jpg");
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -71,7 +71,7 @@ body {
 }
 
 #merci {
-    background-image: url("imgGlobal/vehicule3.jpg");
+    background-image: url("/imgGlobal/vehicule3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
